# hazelcast-c-wrapper-poc

./: CMakeLists.txt  README  README.md  hz_wrapper.cpp  hz_wrapper.h
example/: CMakeLists.txt  main.c
